--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PROJECT_ID="profuturo-vertex-ai-435300-p8"
 BUCKET_NAME="profuturo_retrieval"
 DATASET_ID="profuturo-vertex-ai-435300-p8.profuturo_data"
 TABLE_ID="profuturo-vertex-ai-435300-p8.profuturo_data.chunks_doctos"
+TABLE_ID_BETA="embeddings_alba"
